test/corpus/basic.txt
================================================================================
Simple key-value pairs
================================================================================

id: PL001
type: product_contract
name: Personal Loan

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (string))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (string))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (string))))))

================================================================================
Parameters with flow mapping
================================================================================

parameters:
    loan_amount: {type: decimal, description: "Loan amount"}

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (block_mapping
        (block_mapping_pair
          key: (scalar
            (plain_scalar
              (string)))
          value: (flow_mapping
            (flow_mapping_content
              (flow_mapping_pair
                key: (scalar
                  (plain_scalar
                    (string)))
                value: (scalar
                  (plain_scalar
                    (scd_type))))
              (flow_mapping_pair
                key: (scalar
                  (plain_scalar
                    (string)))
                value: (scalar
                  (quoted_string
                    (double_quoted_string
                      (double_quoted_content))))))))))))

================================================================================
Flow sequence
================================================================================

enum_values: ["daily", "weekly", "monthly"]

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (flow_sequence
        (flow_sequence_content
          (scalar
            (quoted_string
              (double_quoted_string
                (double_quoted_content))))
          (scalar
            (quoted_string
              (double_quoted_string
                (double_quoted_content))))
          (scalar
            (quoted_string
              (double_quoted_string
                (double_quoted_content)))))))))

================================================================================
Block sequence
================================================================================

- activation
- disbursement
- repayment

--------------------------------------------------------------------------------

(document
  (block_sequence
    (block_sequence_item
      (scalar
        (plain_scalar
          (string))))
    (block_sequence_item
      (scalar
        (plain_scalar
          (string))))
    (block_sequence_item
      (scalar
        (plain_scalar
          (string))))))

================================================================================
Nested structure
================================================================================

balances:
    primary: {ledger: general, type: assets, description: "Primary balance"}

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (block_mapping
        (block_mapping_pair
          key: (scalar
            (plain_scalar
              (string)))
          value: (flow_mapping
            (flow_mapping_content
              (flow_mapping_pair
                key: (scalar
                  (plain_scalar
                    (scd_type)))
                value: (scalar
                  (plain_scalar
                    (string))))
              (flow_mapping_pair
                key: (scalar
                  (plain_scalar
                    (string)))
                value: (scalar
                  (plain_scalar
                    (string))))
              (flow_mapping_pair
                key: (scalar
                  (plain_scalar
                    (string)))
                value: (scalar
                  (quoted_string
                    (double_quoted_string
                      (double_quoted_content))))))))))))

================================================================================
Comments
================================================================================

# SCD configuration file
id: PL001  # Product identifier
type: product_contract

--------------------------------------------------------------------------------

(document
  (comment)
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (string))))
    (comment)
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (string))))))

================================================================================
Boolean and numeric values
================================================================================

optional: true
tier: 1
interest_rate: 12.5

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (boolean))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (integer))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (float))))))

================================================================================
Null values
================================================================================

close_date: null
open_date: ~

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (null))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (null))))))

================================================================================
SCD types
================================================================================

amount_field: decimal
ledger_field: ledger
date_field: date_time

--------------------------------------------------------------------------------

(document
  (block_mapping
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (scd_type))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (scd_type))))
    (block_mapping_pair
      key: (scalar
        (plain_scalar
          (string)))
      value: (scalar
        (plain_scalar
          (scd_type))))))
