test/corpus/nested_mapping.txt
==================
Nested mapping with indented values
==================

l1k1:
    l2k2: "belongs to l1k1"
    l2k3: "belongs to l1k1"

---

(document
  (block_mapping_pair
    key: (scalar
      (plain_scalar
        (string)))
    value: (block_mapping
      (INDENT)
      (block_mapping_pair
        key: (scalar
          (plain_scalar
            (string)))
        value: (scalar
          (quoted_string
            (double_quoted_string
              (double_quoted_content)))))
      (block_mapping_pair
        key: (scalar
          (plain_scalar
            (string)))
        value: (scalar
          (quoted_string
            (double_quoted_string
              (double_quoted_content)))))
      (DEDENT))))
